--- a/admin.html
+++ b/admin.html
@@ -1,56 +1,191 @@
-<!-- ============================ -->
-<!-- ✅ admin.html - DEBUGGED FINAL -->
-<!-- ============================ -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin | EliteLogos</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Admin Panel | EliteLogos</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-</head>
-<body class="bg-black text-white font-sans min-h-screen p-6">
-  <h1 class="text-3xl font-bold mb-6">Admin Panel - Add Logo</h1>
-
-  <form id="addLogoForm" class="space-y-4 max-w-md">
-    <input id="logoTitle" type="text" placeholder="Logo Title" required class="w-full p-2 text-black rounded" />
-    <input id="logoImage" type="file" accept="image/*" required class="w-full p-2 text-white" />
-    <select id="logoCategory" required class="w-full p-2 text-black rounded">
-      <option value="" disabled selected>Select Category</option>
-      <option value="Corporate">Corporate</option>
-      <option value="Personal">Personal</option>
-      <option value="Retail">Retail</option>
-    </select>
-    <button type="submit" class="bg-yellow-400 text-black px-4 py-2 rounded">Add Logo</button>
-  </form>
-
-  <div class="mt-6">
-    <h2 class="text-2xl font-semibold mb-4">Gallery Preview</h2>
-    <div id="galleryGrid" class="grid grid-cols-1 md:grid-cols-3 gap-4"></div>
-  </div>
-
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
-      authDomain: "thelogobucket-6389b.firebaseapp.com",
-      databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com",
-      projectId: "thelogobucket-6389b",
-      storageBucket: "thelogobucket-6389b.appspot.com",
-      messagingSenderId: "237466771183",
-      appId: "1:237466771183:web:4984a3b31ff5f266c4451a"
-    };
-
-    if (!firebase.apps.length) {
-      firebase.initializeApp(firebaseConfig);
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: 'Montserrat', sans-serif;
     }
-    const db = firebase.database();
+    .delete-btn {
+      transition: all 0.2s ease;
+    }
+    .delete-btn:hover {
+      transform: scale(1.05);
+    }
+  </style>
+</head>
+<body class="min-h-screen">
+  <!-- Navbar -->
+  <nav class="bg-black bg-opacity-90 text-white py-4 px-6 fixed w-full z-40 shadow-lg">
+    <div class="container mx-auto flex justify-between items-center">
+      <a href="index.html" class="text-2xl font-bold">
+        <span class="text-white">Elite</span><span class="text-gray-300">Logos</span>
+      </a>
+      <div class="hidden md:flex space-x-8">
+        <a href="index.html" class="hover:text-gray-300 transition-colors">Home</a>
+        <a href="gallery.html" class="hover:text-gray-300 transition-colors">Gallery</a>
+        <a href="services.html" class="hover:text-gray-300 transition-colors">Services</a>
+        <a href="about.html" class="hover:text-gray-300 transition-colors">About</a>
+        <a href="contact.html" class="hover:text-gray-300 transition-colors">Contact</a>
+        <a href="admin.html" class="hover:text-gray-300 transition-colors font-bold">Admin</a>
+      </div>
+      <button class="md:hidden text-2xl" id="menu-toggle">
+        <i class="fas fa-bars" id="menu-icon"></i>
+      </button>
+    </div>
+    <div class="hidden md:hidden bg-black bg-opacity-90 absolute w-full left-0 top-16 px-6 pb-4" id="mobile-menu">
+      <div class="flex flex-col space-y-4 mt-4" id="mobile-nav-items">
+        <a href="index.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">Home</a>
+        <a href="gallery.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">Gallery</a>
+        <a href="services.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">Services</a>
+        <a href="about.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">About</a>
+        <a href="contact.html" class="hover:text-gray-300 transition-colors pb-2">Contact</a>
+        <a href="admin.html" class="hover:text-gray-300 transition-colors font-bold">Admin</a>
+      </div>
+    </div>
+  </nav>
 
-    const form = document.getElementById("addLogoForm");
+  <main class="pt-24 container mx-auto px-6 max-w-lg">
+    <h1 class="text-3xl font-bold mb-6">Admin Panel - Add New Logo</h1>
+
+    <form id="addLogoForm" class="mb-8">
+      <label class="block mb-2" for="logoTitle">Logo Title</label>
+      <input type="text" id="logoTitle" required class="w-full p-2 mb-4 rounded text-black" />
+
+      <label class="block mb-2" for="logoImage">Logo Image</label>
+      <input type="file" id="logoImage" accept="image/*" required class="w-full p-2 mb-4 rounded" />
+      <small class="text-gray-400 mb-4 block">(Take photo or upload from device)</small>
+
+      <label class="block mb-2" for="logoCategory">Category</label>
+      <select id="logoCategory" required class="w-full p-2 mb-4 rounded text-black">
+        <option value="" disabled selected>Select category</option>
+        <option value="Corporate">Corporate</option>
+        <option value="Personal">Personal</option>
+        <option value="Retail">Retail</option>
+      </select>
+
+      <button type="submit" class="bg-yellow-400 text-black px-4 py-2 rounded hover:bg-yellow-500">
+        Add Logo
+      </button>
+    </form>
+
+    <section>
+      <h2 class="text-2xl font-bold mb-4">Gallery Preview</h2>
+      <div id="galleryGrid" class="grid grid-cols-1 md:grid-cols-3 gap-6" aria-live="polite"></div>
+    </section>
+  </main>
+
+  <footer class="bg-black text-white py-6 mt-12">
+    <div class="container mx-auto text-center">
+      <p>&copy; 2023 EliteLogos. All rights reserved.</p>
+    </div>
+  </footer>
+<!-- Firebase App (core SDK) -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<!-- Firebase Realtime Database -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
+    authDomain: "thelogobucket-6389b.firebaseapp.com",
+    databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com",
+    projectId: "thelogobucket-6389b",
+    storageBucket: "thelogobucket-6389b.firebasestorage.app",
+    messagingSenderId: "237466771183",
+    appId: "1:237466771183:web:4984a3b31ff5f266c4451a"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const database = firebase.database();
+</script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+  <script>
+    // Password protection
+    const ADMIN_PASSWORD = "yourpassword123"; // Change this
+
+    function checkPassword() {
+      const auth = sessionStorage.getItem("admin-auth");
+      if (auth !== ADMIN_PASSWORD) {
+        const entered = prompt("Enter admin password:");
+        if (entered === ADMIN_PASSWORD) {
+          sessionStorage.setItem("admin-auth", ADMIN_PASSWORD);
+        } else {
+          alert("Incorrect password!");
+          window.location.href = "index.html";
+        }
+      }
+    }
+    checkPassword();
+
+    // Mobile menu toggle
+    const menuToggle = document.getElementById("menu-toggle");
+    const mobileMenu = document.getElementById("mobile-menu");
+    const menuIcon = document.getElementById("menu-icon");
+
+    if (menuToggle && mobileMenu && menuIcon) {
+      menuToggle.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
+        if (mobileMenu.classList.contains("hidden")) {
+          menuIcon.classList.replace("fa-times", "fa-bars");
+        } else {
+          menuIcon.classList.replace("fa-bars", "fa-times");
+        }
+      });
+    }
+
+    const addLogoForm = document.getElementById("addLogoForm");
     const galleryGrid = document.getElementById("galleryGrid");
 
+    // Load logos from localStorage and display preview
+    function loadLogos() {
+      galleryGrid.innerHTML = "";
+      const logos = JSON.parse(localStorage.getItem("elitelogos_logos")) || [];
+      if (logos.length === 0) {
+        galleryGrid.innerHTML = '<p class="text-gray-400">No logos added yet.</p>';
+        return;
+      }
+      logos.forEach(({ title, image, category }, index) => {
+        const div = document.createElement("div");
+        div.className = "bg-gray-800 rounded-lg overflow-hidden shadow-lg";
+        div.innerHTML = `
+          <img src="${image}" alt="${title}" class="w-full h-48 object-cover" />
+          <div class="p-4">
+            <h3 class="text-xl font-bold mb-2">${title}</h3>
+            <p class="text-gray-300 mb-2">${category}</p>
+            <button data-index="${index}" class="delete-btn bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600">Delete</button>
+          </div>
+        `;
+        galleryGrid.appendChild(div);
+      });
+
+      // Attach delete handlers
+      document.querySelectorAll(".delete-btn").forEach((btn) => {
+        btn.addEventListener("click", (e) => {
+          const idx = e.target.getAttribute("data-index");
+          deleteLogo(idx);
+        });
+      });
+    }
+
+    // Delete logo by index
+    function deleteLogo(index) {
+      const logos = JSON.parse(localStorage.getItem("elitelogos_logos")) || [];
+      logos.splice(index, 1);
+      localStorage.setItem("elitelogos_logos", JSON.stringify(logos));
+      loadLogos();
+    }
+
+    // Convert image file to base64
     function fileToBase64(file) {
       return new Promise((resolve, reject) => {
         const reader = new FileReader();
@@ -60,7 +195,7 @@
       });
     }
 
-    form.addEventListener("submit", async (e) => {
+    addLogoForm.addEventListener("submit", async (e) => {
       e.preventDefault();
       const title = document.getElementById("logoTitle").value.trim();
       const imageFile = document.getElementById("logoImage").files[0];
@@ -73,47 +208,19 @@
 
       try {
         const imageBase64 = await fileToBase64(imageFile);
-        await db.ref("logos").push({ title, image: imageBase64, category });
-        form.reset();
-        alert("✅ Logo uploaded successfully!");
-      } catch (err) {
-        console.error("Upload error:", err);
-        alert("❌ Upload failed: " + err.message);
+        const logos = JSON.parse(localStorage.getItem("elitelogos_logos")) || [];
+        logos.push({ title, image: imageBase64, category });
+        localStorage.setItem("elitelogos_logos", JSON.stringify(logos));
+        loadLogos();
+        addLogoForm.reset();
+        alert("Logo added successfully!");
+      } catch (error) {
+        alert("Error reading image file.");
+        console.error(error);
       }
     });
 
-    function loadLogos() {
-      db.ref("logos").on("value", (snapshot) => {
-        const data = snapshot.val();
-        galleryGrid.innerHTML = "";
-        if (!data) {
-          galleryGrid.innerHTML = '<p class="text-gray-400">No logos yet.</p>';
-          return;
-        }
-
-        Object.entries(data).forEach(([key, { title, image, category }]) => {
-          const div = document.createElement("div");
-          div.className = "bg-gray-800 rounded-lg overflow-hidden shadow-lg";
-          div.innerHTML = `
-            <img src="${image}" alt="${title}" class="w-full h-48 object-cover" />
-            <div class="p-4">
-              <h3 class="text-xl font-bold mb-1">${title}</h3>
-              <p class="text-gray-300 mb-2">${category}</p>
-              <button data-key="${key}" class="delete-btn bg-red-500 text-white px-3 py-1 rounded">Delete</button>
-            </div>
-          `;
-          galleryGrid.appendChild(div);
-        });
-
-        document.querySelectorAll(".delete-btn").forEach(btn => {
-          btn.addEventListener("click", (e) => {
-            const key = e.target.getAttribute("data-key");
-            db.ref("logos/" + key).remove();
-          });
-        });
-      });
-    }
-
+    // Initial load
     loadLogos();
   </script>
 </body>
