--- a/admin.html
+++ b/admin.html
@@ -5,10 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Admin Panel | EliteLogos</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
     body {
       background-color: #000;
@@ -89,100 +86,64 @@
       <p>&copy; 2023 EliteLogos. All rights reserved.</p>
     </div>
   </footer>
-<!-- Firebase App (core SDK) -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<!-- Firebase Realtime Database -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
-    authDomain: "thelogobucket-6389b.firebaseapp.com",
-    databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com",
-    projectId: "thelogobucket-6389b",
-    storageBucket: "thelogobucket-6389b.firebasestorage.app",
-    messagingSenderId: "237466771183",
-    appId: "1:237466771183:web:4984a3b31ff5f266c4451a"
-  };
 
-  firebase.initializeApp(firebaseConfig);
-  const database = firebase.database();
-</script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+  <!-- Firebase App (core SDK) -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <!-- Firebase Realtime Database -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script>
-    // Password protection
-    const ADMIN_PASSWORD = "yourpassword123"; // Change this
+    const firebaseConfig = {
+      apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
+      authDomain: "thelogobucket-6389b.firebaseapp.com",
+      databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com",
+      projectId: "thelogobucket-6389b",
+      storageBucket: "thelogobucket-6389b.firebasestorage.app",
+      messagingSenderId: "237466771183",
+      appId: "1:237466771183:web:4984a3b31ff5f266c4451a"
+    };
 
-    function checkPassword() {
-      const auth = sessionStorage.getItem("admin-auth");
-      if (auth !== ADMIN_PASSWORD) {
-        const entered = prompt("Enter admin password:");
-        if (entered === ADMIN_PASSWORD) {
-          sessionStorage.setItem("admin-auth", ADMIN_PASSWORD);
-        } else {
-          alert("Incorrect password!");
-          window.location.href = "index.html";
-        }
-      }
-    }
-    checkPassword();
-
-    // Mobile menu toggle
-    const menuToggle = document.getElementById("menu-toggle");
-    const mobileMenu = document.getElementById("mobile-menu");
-    const menuIcon = document.getElementById("menu-icon");
-
-    if (menuToggle && mobileMenu && menuIcon) {
-      menuToggle.addEventListener("click", () => {
-        mobileMenu.classList.toggle("hidden");
-        if (mobileMenu.classList.contains("hidden")) {
-          menuIcon.classList.replace("fa-times", "fa-bars");
-        } else {
-          menuIcon.classList.replace("fa-bars", "fa-times");
-        }
-      });
-    }
+    firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
 
     const addLogoForm = document.getElementById("addLogoForm");
     const galleryGrid = document.getElementById("galleryGrid");
 
-    // Load logos from localStorage and display preview
+    // Load logos from Firebase and display preview
     function loadLogos() {
       galleryGrid.innerHTML = "";
-      const logos = JSON.parse(localStorage.getItem("elitelogos_logos")) || [];
-      if (logos.length === 0) {
-        galleryGrid.innerHTML = '<p class="text-gray-400">No logos added yet.</p>';
-        return;
-      }
-      logos.forEach(({ title, image, category }, index) => {
-        const div = document.createElement("div");
-        div.className = "bg-gray-800 rounded-lg overflow-hidden shadow-lg";
-        div.innerHTML = `
-          <img src="${image}" alt="${title}" class="w-full h-48 object-cover" />
-          <div class="p-4">
-            <h3 class="text-xl font-bold mb-2">${title}</h3>
-            <p class="text-gray-300 mb-2">${category}</p>
-            <button data-index="${index}" class="delete-btn bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600">Delete</button>
-          </div>
-        `;
-        galleryGrid.appendChild(div);
-      });
+      database.ref('logos').on('value', (snapshot) => {
+        const logos = snapshot.val() || {};
+        if (Object.keys(logos).length === 0) {
+          galleryGrid.innerHTML = '<p class="text-gray-400">No logos added yet.</p>';
+          return;
+        }
+        Object.entries(logos).forEach(([key, { title, image, category }]) => {
+          const div = document.createElement("div");
+          div.className = "bg-gray-800 rounded-lg overflow-hidden shadow-lg";
+          div.innerHTML = `
+            <img src="${image}" alt="${title}" class="w-full h-48 object-cover" />
+            <div class="p-4">
+              <h3 class="text-xl font-bold mb-2">${title}</h3>
+              <p class="text-gray-300 mb-2">${category}</p>
+              <button data-key="${key}" class="delete-btn bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600">Delete</button>
+            </div>
+          `;
+          galleryGrid.appendChild(div);
+        });
 
-      // Attach delete handlers
-      document.querySelectorAll(".delete-btn").forEach((btn) => {
-        btn.addEventListener("click", (e) => {
-          const idx = e.target.getAttribute("data-index");
-          deleteLogo(idx);
+        // Attach delete handlers
+        document.querySelectorAll(".delete-btn").forEach((btn) => {
+          btn.addEventListener("click", (e) => {
+            const key = e.target.getAttribute("data-key");
+            deleteLogo(key);
+          });
         });
       });
     }
 
-    // Delete logo by index
-    function deleteLogo(index) {
-      const logos = JSON.parse(localStorage.getItem("elitelogos_logos")) || [];
-      logos.splice(index, 1);
-      localStorage.setItem("elitelogos_logos", JSON.stringify(logos));
-      loadLogos();
+    // Delete logo by key
+    function deleteLogo(key) {
+      database.ref('logos/' + key).remove();
     }
 
     // Convert image file to base64
@@ -208,9 +169,8 @@
 
       try {
         const imageBase64 = await fileToBase64(imageFile);
-        const logos = JSON.parse(localStorage.getItem("elitelogos_logos")) || [];
-        logos.push({ title, image: imageBase64, category });
-        localStorage.setItem("elitelogos_logos", JSON.stringify(logos));
+        const newLogoRef = database.ref('logos').push();
+        await newLogoRef.set({ title, image: imageBase64, category });
         loadLogos();
         addLogoForm.reset();
         alert("Logo added successfully!");
