--- a/gallery.html
+++ b/gallery.html
@@ -61,47 +61,48 @@
     </div>
   </footer>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script>
-    // Mobile menu toggle
-    const menuToggle = document.getElementById("menu-toggle");
-    const mobileMenu = document.getElementById("mobile-menu");
-    const menuIcon = document.getElementById("menu-icon");
+    const firebaseConfig = {
+      apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
+      authDomain: "thelogobucket-6389b.firebaseapp.com",
+      databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com",
+      projectId: "thelogobucket-6389b",
+      storageBucket: "thelogobucket-6389b.firebasestorage.app",
+      messagingSenderId: "237466771183",
+      appId: "1:237466771183:web:4984a3b31ff5f266c4451a"
+    };
 
-    if (menuToggle && mobileMenu && menuIcon) {
-      menuToggle.addEventListener("click", () => {
-        mobileMenu.classList.toggle("hidden");
-        if (mobileMenu.classList.contains("hidden")) {
-          menuIcon.classList.replace("fa-times", "fa-bars");
-        } else {
-          menuIcon.classList.replace("fa-bars", "fa-times");
-        }
-      });
-    }
-
+    firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
     const galleryGrid = document.getElementById("galleryGrid");
 
+    // Load logos from Firebase and display
     function loadLogos() {
       galleryGrid.innerHTML = "";
-      const logos = JSON.parse(localStorage.getItem("elitelogos_logos")) || [];
-      if (logos.length === 0) {
-        galleryGrid.innerHTML = '<p class="text-gray-400">No logos found.</p>';
-        return;
-      }
-      logos.forEach(({ title, image, category }) => {
-        const div = document.createElement("div");
-        div.className = "gallery-item bg-gray-800 rounded-lg overflow-hidden shadow-lg";
-        div.innerHTML = `
-          <img src="${image}" alt="${title}" class="w-full h-48 object-cover" />
-          <div class="p-4">
-            <h3 class="text-xl font-bold mb-2">${title}</h3>
-            <p class="text-gray-300 mb-2">${category}</p>
-          </div>
-        `;
-        galleryGrid.appendChild(div);
+      database.ref('logos').on('value', (snapshot) => {
+        const logos = snapshot.val() || {};
+        if (Object.keys(logos).length === 0) {
+          galleryGrid.innerHTML = '<p class="text-gray-400">No logos found.</p>';
+          return;
+        }
+        Object.entries(logos).forEach(([key, { title, image, category }]) => {
+          const div = document.createElement("div");
+          div.className = "gallery-item bg-gray-800 rounded-lg overflow-hidden shadow-lg";
+          div.innerHTML = `
+            <img src="${image}" alt="${title}" class="w-full h-48 object-cover" />
+            <div class="p-4">
+              <h3 class="text-xl font-bold mb-2">${title}</h3>
+              <p class="text-gray-300 mb-2">${category}</p>
+            </div>
+          `;
+          galleryGrid.appendChild(div);
+        });
       });
     }
 
+    // Initial load
     loadLogos();
   </script>
 </body>
